@@ -1,4 +1,10 @@
 2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/FileSystem.h,
+	  src/jfs.cc,
+	  src/xfs.cc: use mkdir instead of wrapping CLI tool
+
+2005-12-14 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Utils.h,
 	  src/Utils.cc: added mount() and unmount()
